# image-ranking

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: lintest.yml  pylint.yml  test.yml
backend/: Dockerfile  backend.py  backend.test.env  requirements.txt  utils.py
backend/feature_extractor/: __init__.py  extractor.py
backend/ml-models/: ranker.test.pkl  scaler.test.pkl
backend/ranker/: __init__.py  ranker.py
backend/segmentation/: __init__.py  segmentor.py
backend/tests/: test_backend.py  test_ml.py
data/: holdout_ids.csv
data/meta/: embeddings-44c73c23.json  embeddings-efe5f026.json  holdout-set.json  styles-44c73c23.json  styles-668955cf.json
db/: db.test.env  init.py  pgadmin.test.env
deployment/: app-deployment.yaml  infra-deployment.yaml
frontend/: Dockerfile  app.py  requirements.txt
infra/: docker-compose.yaml
infra/db/: init.py
ml/data/: embeddings-sample.csv  styles-sample.pkl
ml/ml-models/: models.py
ml/notebooks/: 0707-zeinovich-getting-started.ipynb  0807-zeinovich-fashion-dataset.ipynb  0907-zeinovich-embeddings.ipynb  1107-zeinovich-knn.ipynb  1207-zeinovich-model.ipynb  1507-zeinovich-styles-psql.ipynb  2107-zeinovich-cli-test.ipynb
ml/training/: make_features.py  utils.py
notebooks/: 0907-zeinovich-embeddings.ipynb  1007-zeinovich-clustering.ipynb  1107-zeinovich-holdout.ipynb  1107-zeinovich-knn.ipynb  1207-zeinovich-model.ipynb  1407-zeinovich-filtering.ipynb  1507-zeinovich-styles-psql.ipynb
src/: test.py
src/backend/: backend.py
(+4 files in other folders)
