[tool.poetry]
name = "image-ranking"
version = "0.1.0"
description = ""
authors = ["zeinovich <nikita.zinovich@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "image_ranking"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
flask = "^2.3.2"
numpy = "^1.25.1"
pandas = "^2.0.3"
sqlalchemy = "^2.0.19"
streamlit = "^1.25.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
tqdm = "^4.65.0"
scikit-learn = "^1.3.0"
gunicorn = "20.1.0"
psycopg2 = "^2.9.6"
pillow = "9.0.0"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.11.0%2Bcpu-cp38-cp38-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cpu/torchvision-0.12.0%2Bcpu-cp38-cp38-linux_x86_64.whl"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mlflow = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
